...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">


    <com.coinninja.coinkeeper.view.analytics.AnalyticsButton
        android:id="@+id/request_btn"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.coinninja.coinkeeper.view.analytics.AnalyticsButton
        android:id="@+id/send_btn"
        android:layout_width="145dp"
        android:layout_height="58dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="0dp"
...
