...
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:minWidth="@dimen/qr_image_scale_min"
        android:minHeight="@dimen/qr_image_scale_min"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/request_copy_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_header_label"
        tools:ignore="ContentDescription" />

    <com.coinninja.coinkeeper.view.button.CopyToBufferButton
...
