...
    <string name="app_name">DropBit</string>
    <string name="btn_new_wallet">New Wallet</string>
    <string name="btn_restore">Restore Wallet</string>

    <!-- Activity Titles -->
    <string name="settings_title">Settings</string>
    <string name="backup_recovery_words_title">Recovery Words</string>
    <string name="spend_bitcoin_header">Spend Your Bitcoin</string>
    <string name="pay_contacts_title">Contacts</string>
    <string name="restore_wallet_title">Restore From Backup</string>

    <!-- Dialog Related Strings -->
    <string name="close">close</string>
...
    <string name="invite_send_expired_message">For security purposes we can only allow 48 hours for a DropBit to be completed. Your DropBit sent to %1$s has expired. Please try sending again.</string>
    <string name="invite_send_canceled_message">%1$s has canceled the DropBit for %2$s.</string>
    <string name="invite_broadcast_real_btc_message">%1$s was sent to %2$s</string>
    <string name="invite_broadcast_canceled_message">DropBit to %1$s has been canceled</string>

    <!-- Training Screens -->
    <string name="training_body_header_whats_bitcoin">What is Bitcoin?</string>
    <string name="training_body_header_system_broken">Why the system is broken</string>
    <string name="training_body_header_recovery_words">Recovery Words</string>
    <string name="training_body_header_dropbit">Send Bitcoin via SMS</string>

    <string name="training_body_whats_bitcoin">Bitcoin is a currency that’s completely owned and controlled by you. It can be sent anywhere in the world, very quickly, cheaply and without the need for a 3rd party transmitter, like a bank.</string>
    <string name="training_body_system_broken">Banks charge you fees, your dollar is consistently being devalued and it’s extremely hard to exchange or send currency for global use.</string>
    <string name="training_body_recovery_words">Recovery words consist of <b>12 or 24</b> words that will allow you to restore your wallet if anything happens to your phone. <b>Treat this like your bank account password… they’re very important.</b></string>
    <string name="training_body_dropbit">By adding your phone number it will allow you to transact Bitcoin with people in your identity list.</string>

...
