...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/training_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/training_footer" />

    <ImageView
        android:id="@+id/ic_close"
...
            android:layout_marginTop="@dimen/training_dots_padding"
            app:tabBackground="@drawable/training_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <Button
            android:id="@+id/training_footer_action_button"
            android:layout_width="@dimen/training_footer_action_button_width"
            android:layout_height="@dimen/training_footer_action_button_height"
            android:layout_above="@+id/training_footer_learn_link"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/training_footer_action_button_padding"
            android:visibility="gone"
...
